--- a/html/dwz_header_base.html
+++ b/html/dwz_header_base.html
@@ -1,5 +1,5 @@
 <div class="headerNav">
-	<div class='mainHeadLeftTitle mainHeadLeftColor'>【&Sigma;】字符云监控系统 - 开源版</div>
+	<div class='mainHeadLeftTitle mainHeadLeftColor'>【&Sigma;】字符云监控系统</div>
 	<ul class="nav">
 		<li><a href="<?cs var:config.xrkmonitor_url ?>" target='_blank'>云版本主页</a></li>
 
