--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
-	<title>字符云监控开源版</title>
+	<title>字符云监控系统</title>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<script language="javascript" src="<?cs var:config.dwzpath?>js/jquery-1.7.2.js"></script>
 	<script src="<?cs var:config.dwzpath?>js/dmt.comm.js" type="text/javascript"></script>
@@ -148,7 +148,7 @@
 		<div style="height:90px;"></div>
 		<form name= "login" action="#" method="get"> 
 			<div id="loginbox">
-				<div id="title" align="center"><p align="left">字符云监控开源版用户登录</p></div>
+				<div id="title" align="center"><p align="left">字符云监控系统用户登录</p></div>
 			  	<div id="enter">
 						<div id="enter_box">
 						用户名：<input id="username" type="text" class="inputclass" size="20" maxlength="20" >
@@ -187,18 +187,13 @@
 		<div style='margin-left:-60px;'> 
 			<ul> 
 				<li>
-					<a href='http://xrkmonitor.com' target='_blank'>
-						<font style='font-size:17px; font-weight:bold'>字符云监控在线云版</font>
+					<a href='https://gitee.com/xrkmonitorcom/open' target='_blank'>
+						<font style='font-size:17px; font-weight:bold'>码云源码下载链接</font>
 					</a>
 				</li>
 				<li>
 					<a href='http://xrkmonitor.com' target='_blank'>
-						<font style='font-size:17px; font-weight:bold'>开源版源码下载链接</font>
-					</a>
-				</li>
-				<li>
-					<a href='http://xrkmonitor.com' target='_blank'>
-						<font style='font-size:17px; font-weight:bold'>开源版在线视频文档</font>
+						<font style='font-size:17px; font-weight:bold'>字符云监控云版本</font>
 					</a>
 				</li>
 			</ul>
