--- a/html/dmt_update_tip.html
+++ b/html/dmt_update_tip.html
@@ -44,17 +44,17 @@
 		<h3 align='left' style='margin-left:50px;margin-right:20px'>
 			系统正在更新，预计更新时间 10 分钟<br>
 			开始时间：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<font color='blue'>2019-05-25 19:11</font><br />
+				<font color='blue'>2019-09-10 9:50</font><br />
 			预计结束时间：
-				<font color='blue'>2019-05-25 19:21</font>
+				<font color='blue'>2019-09-10 10:00</font>
 			<div class='my-other-wx'>
 				<br>微信公众号</br>
-				<img width='150px' height='150px' src='/monitor/main/img/qrcode_for_gh_ad9dfcd2f564_258.jpg' />
+				<img width='150px' height='150px' src='http://xrkmonitor.com/monitor/main/img/main_wx_qrcode.jpg' />
 			</div>
 			<div class='my-other-qq'>
 				<br>QQ 群</br>
 				<a target='_blank' href='https://jq.qq.com/?_wv=1027&k=5WgNeJs'>
-					<img width='150px' height='150px' src='/monitor/main/img/new_qq_group.png' />
+					<img width='150px' height='150px' src='http://xrkmonitor.com/monitor/main/img/new_qq_group.png' />
 				</a>
 			</div>
 	
