--- a/html/dwz_header_base.html
+++ b/html/dwz_header_base.html
@@ -1,6 +1,7 @@
 <div class="headerNav">
-	<div class='mainHeadLeftTitle mainHeadLeftColor'>【&Sigma;】字符云监控系统</div>
+	<div class='mainHeadLeftTitle mainHeadLeftColor'>【&Sigma;】字符云监控系统 - 开源版</div>
 	<ul class="nav">
+		<li><a href="https://gitee.com/xrkmonitorcom/open" target='_blank'>码云源码下载</a></li>
 		<li><a href="<?cs var:config.xrkmonitor_url ?>" target='_blank'>云版本主页</a></li>
 
 		<li><a href="<?cs var:config.cgipath?>mt_slog_user?action=init_change_pwd" mask=true maxable=false target="dialog" width="400" height="240"> 修改密码</a></li>
