--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="expires" content="0">
 		<meta http-equiv="pragma" content="no-cache">
 		<meta http-equiv="content-Type" content="text/html; charset=utf-8" />
-		<meta name="keywords" content="字符云监控系统,云监控系统,监控提醒,日志系统,云日志系统,日志汇聚,多云部署">
-		<meta name="description" content="字符云监控系统-多云部署一站监控,一切尽在掌握!">
+		<meta name="keywords" content="xrkmonitor,字符云监控系统,云监控系统,监控提醒,日志系统,云日志系统,日志汇聚,多云部署">
+		<meta name="description" content="集自定义监控、日志监控、数据可视化以及监控告警为一体的国产开源监控系统，一切尽在掌握!">
 		<meta name="author" content="rockdeng,1820140912@qq.com,qq:1820140912">
 		<meta name="renderer" content="webkit">
 		<link rel="icon" href="/monitor/themes/default/images/zifu_48.ico">
