--- a/html/dwz_header_base.html
+++ b/html/dwz_header_base.html
@@ -3,6 +3,7 @@
 	<ul class="nav">
 		<li><a href="https://gitee.com/xrkmonitorcom/open" target='_blank'>码云源码下载</a></li>
 		<li><a href="<?cs var:config.xrkmonitor_url ?>" target='_blank'>云版本主页</a></li>
+		<li><a href="http://xrkmonitor.com/monitor/showdoc/showdoc/web/#/4" target='_blank'>帮助文档</a></li>
 
 		<li><a href="<?cs var:config.cgipath?>mt_slog_user?action=init_change_pwd" mask=true maxable=false target="dialog" width="400" height="240"> 修改密码</a></li>
 
