--- a/html/dmt_help_doc.html
+++ b/html/dmt_help_doc.html
@@ -1,7 +1,7 @@
 <div class="accordion" fillSpace="sidebar">
 	<div class="accordionContent">
 		<ul class="tree treeFolder expand">
-			<li><a href="/monitor/open_doc.html" target="navTab" rel="dmt_open_doc">帮助文档</a></li>
+			<li><a href="http://xrkmonitor.com/monitor/dmt_open_doc.html" target="navTab" rel="dmt_open_doc">帮助文档</a></li>
 		</ul>
 	</div>
 </div>
