--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -7,7 +7,7 @@
 		<?cs if:comm.user_type == 1 ?>
 		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_user" id='dh_left_user'><span>用户管理</span></a></li>
 		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv"><span>系统服务器</span></a></li>
-		<li id='navDocMenu'><a href="/monitor/help_doc.html"><span>帮助文档</span></a></li>
+		<li id='navDocMenu'><a href="/monitor/dmt_help_doc.html"><span>帮助文档</span></a></li>
 		<?cs /if ?>
 		<li class="selected" id='navMenuLast'><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_main"><span>我的主页</span></a></li>
 	</ul>
