--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -197,6 +197,11 @@
 					</a>
 				</li>
 				<li>
+					<a href='http://xrkmonitor.com/monitor/dmt_open_doc.html' target='_blank'>
+						<font style='font-size:17px; font-weight:bold'>字符云监控在线文档</font>
+					</a>
+				</li>
+				<li>
 					<a href='http://xrkmonitor.com' target='_blank'>
 						<font style='font-size:17px; font-weight:bold'>字符云监控云版本</font>
 					</a>
