--- a/html/dmt_history_log.html
+++ b/html/dmt_history_log.html
@@ -1,4 +1,4 @@
-<link href="<?cs var:config.dwzpath?>themes/css/showlog.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="<?cs var:config.docpath?>themes/css/showlog.css" rel="stylesheet" type="text/css" media="screen"/>
 
 <div class="pageContent">
 	<div class="panel collapse" style="width:99%; float:left;" id="dhlLogFilter" defH="170" OnToggle="dhlPanelFun">
