--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -3,10 +3,10 @@
 <head>
 	<title>字符云监控系统</title>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-	<script language="javascript" src="<?cs var:config.dwzpath?>js/jquery-1.7.2.js"></script>
-	<script src="<?cs var:config.dwzpath?>js/dmt.comm.js" type="text/javascript"></script>
-	<script language="javascript" src="<?cs var:config.dwzpath?>js/jquery.md5.js"></script>
-	<script language="javascript" src="<?cs var:config.dwzpath?>js/jquery.cookie.js"></script>
+	<script language="javascript" src="<?cs var:config.docpath?>js/jquery-1.7.2.js"></script>
+	<script src="<?cs var:config.docpath?>js/dmt.comm.js" type="text/javascript"></script>
+	<script language="javascript" src="<?cs var:config.docpath?>js/jquery.md5.js"></script>
+	<script language="javascript" src="<?cs var:config.docpath?>js/jquery.cookie.js"></script>
 	<meta name="keywords" content="字符云监控系统,云监控系统,监控提醒,日志系统,云日志系统,日志汇聚,多云部署">
 	<meta name="description" content="字符云监控系统-多云部署一站监控,一切尽在掌握!">
 	<meta name="author" content="rockdeng,1820140912@qq.com,qq:1820140912">
