--- a/html/dwz_index.html
+++ b/html/dwz_index.html
@@ -4,14 +4,14 @@
 
 <?cs include:config.cspath+"main_meta.html" ?>
 
-<link href="<?cs var:config.dwzpath?>themes/default/style.css" rel="stylesheet" type="text/css" media="screen"/>
-<link href="<?cs var:config.dwzpath?>themes/css/core.css" rel="stylesheet" type="text/css" media="screen"/>
-<link href="<?cs var:config.dwzpath?>themes/css/print.css" rel="stylesheet" type="text/css" media="print"/>
-<link href="<?cs var:config.dwzpath?>uploadify/css/uploadify.css" rel="stylesheet" type="text/css" media="screen"/>
-<link href="<?cs var:config.dwzpath?>themes/sexybuttons/sexybuttons.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="<?cs var:config.docpath?>themes/default/style.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="<?cs var:config.docpath?>themes/css/core.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="<?cs var:config.docpath?>themes/css/print.css" rel="stylesheet" type="text/css" media="print"/>
+<link href="<?cs var:config.docpath?>uploadify/css/uploadify.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="<?cs var:config.docpath?>themes/sexybuttons/sexybuttons.css" rel="stylesheet" type="text/css" media="screen"/>
 
 <!--[if IE]>
-<link href="<?cs var:config.dwzpath?>themes/css/ieHack.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="<?cs var:config.docpath?>themes/css/ieHack.css" rel="stylesheet" type="text/css" media="screen"/>
 <![endif]-->
 
 <?cs include:config.cspath+"dwz_js.html" ?>
@@ -38,7 +38,7 @@
 
 <script type="text/javascript">
 var g_di_cspath = '<?cs var:config.cspath ?>';
-var g_di_dwzpath = '<?cs var:config.dwzpath ?>';
+var g_di_docpath = '<?cs var:config.docpath ?>';
 var g_di_cgipath = '<?cs var:config.cgipath?>';
 </script>
 
