--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -1,55 +1,55 @@
 <!--[if lte IE 9]>
-<script src="<?cs var:config.dwzpath?>js/speedup.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/speedup.js" type="text/javascript"></script>
 <![endif]-->
 
-<script src="<?cs var:config.dwzpath?>js/jquery-1.7.2.min.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/jquery.cookie.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/jquery.validate.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/jquery.bgiframe.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>xheditor/xheditor-1.1.14-zh-cn.min.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>uploadify/scripts/jquery.uploadify.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/jquery-1.7.2.min.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/jquery.cookie.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/jquery.validate.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/jquery.bgiframe.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>xheditor/xheditor-1.1.14-zh-cn.min.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>uploadify/scripts/jquery.uploadify.js" type="text/javascript"></script>
 
-<script src="<?cs var:config.dwzpath?>js/dwz.core.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.util.date.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.validate.method.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.barDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.drag.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.tree.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.accordion.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.ui.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.theme.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.switchEnv.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.alertMsg.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.contextmenu.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.navTab.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.tab.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.resize.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.dialog.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.dialogDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.sortDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.cssTable.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.stable.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.taskBar.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.ajax.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.pagination.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.database.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.datepicker.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.effects.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.panel.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.checkbox.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.history.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.combox.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.print.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.core.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.util.date.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.validate.method.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.barDrag.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.drag.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.tree.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.accordion.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.ui.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.theme.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.switchEnv.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.alertMsg.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.contextmenu.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.navTab.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.tab.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.resize.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.dialog.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.dialogDrag.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.sortDrag.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.cssTable.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.stable.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.taskBar.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.ajax.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.pagination.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.database.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.datepicker.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.effects.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.panel.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.checkbox.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.history.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.combox.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.print.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
 
 <!-- rock add -->
-<script src="<?cs var:config.dwzpath?>js/dmt.comm.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/echarts.min.js"></script>
-<script src="<?cs var:config.dwzpath?>js/jquery.md5.js" type="text/javascript"></script>
-<script src="<?cs var:config.dwzpath?>js/jquery.highlight-3.js?v=0.3.5"></script>
-<script src="<?cs var:config.dwzpath?>js/frank_calendar.js?v=0.3.5"></script>
-<script src="<?cs var:config.dwzpath?>js/jquery.json-2.3.js?v=0.3.5"></script>
+<script src="<?cs var:config.docpath?>js/dmt.comm.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/echarts.min.js"></script>
+<script src="<?cs var:config.docpath?>js/jquery.md5.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/jquery.highlight-3.js?v=0.3.5"></script>
+<script src="<?cs var:config.docpath?>js/frank_calendar.js?v=0.3.5"></script>
+<script src="<?cs var:config.docpath?>js/jquery.json-2.3.js?v=0.3.5"></script>
 <script type="text/javascript">
 
 var g_siteInfo;
@@ -104,7 +104,7 @@ if (!window.localStorage) {
 }
 
 $(document).ready(function(){
-	DWZ.init("<?cs var:config.dwzpath?>dwz.frag.xml", {
+	DWZ.init("<?cs var:config.docpath?>dwz.frag.xml", {
 		loginUrl:"login_dialog.html", loginTitle:"登录",	// 弹出登录对话框
 		statusCode:{ok:200, error:300, timeout:301}, //【可选】
 		pageInfo:{pageNum:"pageNum", numPerPage:"numPerPage", orderField:"orderField", orderDirection:"orderDirection"}, //【可选】
