--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -11,21 +11,21 @@
 	<meta name="description" content="字符云监控系统-多云部署一站监控,一切尽在掌握!">
 	<meta name="author" content="rockdeng,1820140912@qq.com,qq:1820140912">
 	<meta name="renderer" content="webkit">
-	<link rel="icon" href="/monitor/themes/default/images/zifu_48.ico">
+	<link rel="icon" href="<?cs var:config.docpath ?>/themes/default/images/zifu_48.ico">
 	
 	<style type="text/css">
 	body,th{margin:0; padding:0; font-family:Tahoma,"宋体"; font-size:12px; color:#003399}
 	a{text-decoration:none; color:#003399}
 	a:hover{text-decoration:underline}
 	
-	#wrapper{background:url(<?cs var:config.img_path ?>bg.jpg) repeat-x; width:100%; height:430px}
+	#wrapper{background:url(<?cs var:config.docpath ?>/images/bg.jpg) repeat-x; width:100%; height:430px}
 	#head{width:100%}
 	#biao{ float:right; margin:0; padding:0; width:149px; height:63px}
 	#logo{ width:332px; height:63px}
 	#logo span{display:block}
 	#logo a{display:block;width:332px; height:63px}
 	
-	#inbox{background:url(<?cs var:config.img_path ?>inbox_bg.jpg) no-repeat; width:474px; height:340px; margin-left:auto; margin-right:auto;}
+	#inbox{background:url(<?cs var:config.docpath ?>/images/inbox_bg.jpg) no-repeat; width:474px; height:340px; margin-left:auto; margin-right:auto;}
 	#error{width:260px; border:1px solid #666666; background:#fff; margin-left:auto; margin-right:auto; margin-top:20px; padding:3px; color:#CC0000;}
 	#error_infor{width:90%; margin:auto;}
 	
