--- a/html/dmt_attr_manage.html
+++ b/html/dmt_attr_manage.html
@@ -114,8 +114,8 @@ $(document).ready(function(){
 				$('#dam_show_opr_msg').css('display', 'none').css('margin-top', '20px');
 				break;
 			case '<?cs var:config.str_report_d ?>':
-				$('#dam_data_type').css('height', '40px');
-				$('#dam_attr_type_note_txt label').css('width', '300px').text('按天累计各字符串的上报数值，生成一张饼图，字符型监控点只在视图中展示，需要先在视图中绑定');
+				$('#dam_data_type').css('height', '21px');
+				$('#dam_attr_type_note_txt label').css('width', '300px').text('按天累计各字符串的上报数值，生成一张饼图');
 				$('#dam_excep').css('display', 'none');
 				$('#dam_show_opr_msg').css('display', 'none').css('margin-top', '2px');
 				break;
