--- a/html/dmt_showview_not_bind_attr.html
+++ b/html/dmt_showview_not_bind_attr.html
@@ -91,7 +91,7 @@ $(document).ready(function(){
 			<div class="searchBar">
 				<table class="searchContent">
 					<tr>
-						<td>
+						<td style='width:180px'>
 							<label style='width:60px'>数据类型：</label>
 							<select class="combox" name="dsnba_attr_data_type" id="dsnba_attr_data_type_<?cs var:config.view_id ?>">
 								<option value="0">全部</option>
