--- a/html/dmt_showview_bind_attr.html
+++ b/html/dmt_showview_bind_attr.html
@@ -91,9 +91,9 @@ $(document).ready(function(){
 		<div class="searchBar">
 			<table class="searchContent" >
 				<tr>
-					<td>
+					<td style='width:180px'>
 						<label style='width:60px'>数据类型：</label>
-						<select class="combox" name="dsba_attr_data_type" id="dsba_attr_data_type_<?cs var:config.view_id ?>" style="width:140px">
+						<select class="combox" name="dsba_attr_data_type" id="dsba_attr_data_type_<?cs var:config.view_id ?>">
 							<option value="0">全部</option>
 							<option value="<?cs var:config.sum_report_m ?>">累计量</option>
 							<option value="<?cs var:config.sum_report_his ?>">历史累计量</option>
