--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -3,6 +3,7 @@
 		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_attr"><span>监控点上报查看</span></a></li>
 		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_log"><span>日志上报查看</span></a></li>
 		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_m"><span>上报管理</span></a></li>
+		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><span>插件市场</span></a></li>
 
 		<?cs if:comm.user_type == 1 ?>
 		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_user" id='dh_left_user'><span>用户管理</span></a></li>
