--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="集自定义监控、日志监控、数据可视化以及监控告警为一体的国产开源监控系统，一切尽在掌握!">
 		<meta name="author" content="rockdeng,1820140912@qq.com,qq:1820140912">
 		<meta name="renderer" content="webkit">
-		<link rel="icon" href="/monitor/themes/default/images/zifu_48.ico">
+		<link rel="icon" href="/xrkmonitor/themes/default/images/zifu_48.ico">
 		<title>字符云监控系统</title>
         <style type="text/css">
             html, body
@@ -44,7 +44,7 @@
 					if(IsOtherUA(ua) 
 						|| (ua.indexOf("firefox") == -1 && ua.indexOf("chrome") == -1)) 
 					{
-						document.getElementById('iframeId').src = '/monitor/dmt_ie_tip.html';
+						document.getElementById('iframeId').src = '/xrkmonitor/dmt_ie_tip.html';
 					}
 					else {
 						document.getElementById('iframeId').src = '/cgi-bin/slog_flogin?action=show_main';
