--- a/html/dwz_left_plus.html
+++ b/html/dwz_left_plus.html
@@ -1,9 +1,8 @@
 <div class="accordion" fillSpace="sidebar">
 	<div class="accordionContent">
 		<ul class="tree treeFolder">
-			<li><a href="<?cs var:config.cgipath?>mt_slog?action=sys_plugin&plugin_type=1" target="navTab" rel="dmt_plugin_1">系统监控插件</a></li>
-			<li><a href="<?cs var:config.cgipath?>mt_slog?action=app_plugin&plugin_type=2" target="navTab" rel="dmt_plugin_2">应用监控插件</a></li>
-			<li><a href="<?cs var:config.cgipath?>mt_slog?action=other_plugin&plugin_type=3" target="navTab" rel="dmt_plugin_3">其它监控插件</a></li>
+			<li><a href="<?cs var:config.cgipath?>mt_slog?action=open_plugin" target="navTab" rel="dmt_plugin_open">插件市场</a></li>
+			<li><a href="<?cs var:config.cgipath?>mt_slog?action=my_plugin" target="navTab" rel="dmt_plugin_my">我的插件</a></li>
 		</ul>
 	</div>
 </div>
