--- a/html/dmt_plugin.html
+++ b/html/dmt_plugin.html
@@ -1,4 +1,4 @@
-<script src="<?cs var:config.dwzpath?>js/FileSaver.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/FileSaver.js" type="text/javascript"></script>
 <script language="javascript" type="text/javascript">
 var <?cs var:config.plugin_pre ?>_plugin_list = $.parseJSON('<?cs var:config.plugin_list ?>');
 var <?cs var:config.plugin_pre ?>_sel_plugin = null;
