--- a/html/dmt_plugin.html
+++ b/html/dmt_plugin.html
@@ -2,6 +2,11 @@
 <script language="javascript" type="text/javascript">
 var <?cs var:config.plugin_pre ?>_plugin_list = $.parseJSON('<?cs var:config.plugin_list ?>');
 var <?cs var:config.plugin_pre ?>_sel_plugin = null;
+
+<?cs if:config.plugin_pre == "dpopen" ?>
+var g_LocalOpenPluginList = $.parseJSON('<?cs var:config.local_open_list ?>');
+<?cs /if ?>
+
 var <?cs var:config.plugin_pre ?>_sel_detail_idx = ""; // 用于弹出详情对话框时设置数据
 
 function <?cs var:config.plugin_pre ?>SetSelplugin(selIndex)
@@ -132,9 +137,75 @@ function dpGetPluginMarketStatus(stat, over)
 	return "";
 }
 
+function <?cs var:config.plugin_pre ?>_IsPluginInstall(plugin)
+{
+	if(g_LocalOpenPluginList.count <= 0)
+		return -1;
+
+	for(var i=0; i < g_LocalOpenPluginList.list.length; i++) {
+		if(g_LocalOpenPluginList.list[i].open_plugin_id == plugin.plugin_id) {
+			return i;
+		}
+	}
+	return -1;
+}
+
+function <?cs var:config.plugin_pre ?>_GetPluginInstallStatus(plugin)
+{
+	if(g_LocalOpenPluginList.count <= 0)
+		return "未安装";
+
+	for(var i=0; i < g_LocalOpenPluginList.list.length; i++) {
+		if(g_LocalOpenPluginList.list[i].open_plugin_id == plugin.plugin_id) {
+			return "已安装";
+		}
+	}
+	return "未安装";
+}
+
+function <?cs var:config.plugin_pre ?>_GetInstallPluginShowInfo(idx, plugin, local_plugin)
+{
+	var shtml = "<div plugin_type=1 style='float:left; height:230px; width:450px; background-color:#ecf2f4; margin:10px ";
+		shtml += g_PluginMargin + "px; border-radius:10px; border:1px solid #000;'";
+		shtml += " id='<?cs var:config.plugin_pre ?>_plugin_" + plugin.plugin_id + "'";
+		shtml += " onclick='return <?cs var:config.plugin_pre ?>SetSelplugin(" + idx + ")' >";
+
+	shtml += "<div style='float:left; height:180px; margin:10px; overflow:hidden; text-overflow:ellipsis;'>";
+	shtml += "<a href='#'><img width='160px' height='180px' src='";
+	if(local_plugin.pic != "" && local_plugin.pic != null) 
+		shtml += '<?cs var:config.xrkmonitor_url ?>/monitor/download/plugin/'+local_plugin.pic;
+	else
+		shtml += '<?cs var:config.xrkmonitor_url ?>/monitor/download/plugin/plugin_def_pic.png';
+	shtml += "'></img></a>"
+	shtml += "</div>";
+
+	shtml += "<div style='float:left;'>";
+	shtml += "<div class='pluginName'>" + local_plugin.plugin_name + "</div>";
+	shtml += "<div class='pluginItem'>安装情况: 已安装(" + local_plugin.ver + ")</div>";
+	shtml += "<div class='pluginItem'>开发语言: " + local_plugin.dev_language + "</div>";
+	shtml += "<div class='pluginItem'>运行平台: " + local_plugin.dest_os + "</div>";
+	var mt = '内置';
+	if(local_plugin.set_method != 0)
+		mt = '外置';
+	shtml += "<div class='pluginItem'>部署方式: " + mt + "</div>";
+	shtml += "<div class='pluginItem'>下载次数: <font color='red'>0</font></div>";
+	shtml += "<div class='pluginItem'>最新版本: " + plugin.ver + "</div>";
+	shtml += "<div class='pluginItem'>更新时间: " + local_plugin.update_time + "</div>";
+	shtml += "<div class='pluginItem'>插件描述: " + local_plugin.desc.replace(/&br/g, "\r\n") + "</div>";
+	shtml += "</div>";
+
+	shtml += "<div style='width:440px; float:left; margin-left:10px;'>";
+	shtml += "<img src='<?cs var:config.xrkmonitor_url ?>/monitor/themes/sexybuttons/images/icons/silk/status_online.png'>";
+	shtml += "&nbsp;<font color='#255fcc'>"+local_plugin.auth+"</font></img>";
+	shtml += "</div>";
+
+	shtml += "</div>";
+	return shtml;
+}
+
 function <?cs var:config.plugin_pre ?>_GetPluginShowInfo(idx, plugin)
 {
-	var shtml = "<div style='float:left; height:230px; width:450px; background-color:#ecf2f4; margin:10px ";
+	var shtml = "<div plugin_type=0 style='float:left; height:230px; width:450px; background-color:#ecf2f4; margin:10px ";
 		shtml += g_PluginMargin + "px; border-radius:10px; border:1px solid #000;'";
 		shtml += " id='<?cs var:config.plugin_pre ?>_plugin_" + plugin.plugin_id + "'";
 		shtml += " onclick='return <?cs var:config.plugin_pre ?>SetSelplugin(" + idx + ")' >";
@@ -150,6 +221,7 @@ function <?cs var:config.plugin_pre ?>_GetPluginShowInfo(idx, plugin)
 
 	shtml += "<div style='float:left;'>";
 	shtml += "<div class='pluginName'>" + plugin.plugin_name + "</div>";
+	shtml += "<div class='pluginItem'>安装情况: <font color='blue'>未安装</font></div>";
 	shtml += "<div class='pluginItem'>开发语言: " + plugin.dev_language + "</div>";
 	shtml += "<div class='pluginItem'>运行平台: " + plugin.dest_os + "</div>";
 	var mt = '内置';
@@ -198,8 +270,15 @@ function <?cs var:config.plugin_pre ?>SetpluginList()
 	dmtSetPluginMarginInfo();
 
 	var uhtml = "";
-	for(var i=0, j=1; i < ulist.length; i++,j++) {
-		uhtml += <?cs var:config.plugin_pre ?>_GetPluginShowInfo(i, ulist[i]);
+	var j = 0;
+	for(var i=0; i < ulist.length; i++) {
+		j = <?cs var:config.plugin_pre ?>_IsPluginInstall(ulist[i]);
+		if(j >= 0) {
+			uhtml += <?cs var:config.plugin_pre ?>_GetInstallPluginShowInfo(i, ulist[i], g_LocalOpenPluginList.list[j]);
+		}
+		else {
+			uhtml += <?cs var:config.plugin_pre ?>_GetPluginShowInfo(i, ulist[i]);
+		}
 	}
 
 	$("#<?cs var:config.plugin_pre ?>_plugin_list").html(uhtml);
@@ -214,46 +293,47 @@ function <?cs var:config.plugin_pre ?>SetpluginList()
 		}
 	);
 
-	<?cs if:config.navTabId == "dmt_plugin_my" ?>
-	$("#<?cs var:config.plugin_pre ?>_plugin_list").children().contextMenu('mypluginCM', {
-	<?cs else ?>
-	$("#<?cs var:config.plugin_pre ?>_plugin_list").children().contextMenu('mypluginOpen', {
-	<?cs /if ?>
-		callback: function(t, op) {
-			t.trigger('click');
-		},
-		bindings: { 
-			modify:function(t, m) {
-				return <?cs var:config.plugin_pre ?>ModPlugin();
+	$("#<?cs var:config.plugin_pre ?>_plugin_list").children().each(function() {
+		var sMenu = 'mypluginOpenUnIns';
+		if($(this).attr('plugin_type') == 1)
+			sMenu = 'mypluginOpenIns';
+		$(this).contextMenu(sMenu, {
+			callback: function(t, op) {
+				t.trigger('click');
 			},
-			delete:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>DeletePlugin();
-			},
-			downpb:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>OnDownFile('pb');	
-			},
-			downconf:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>OnDownFile('conf');
-			},
-			downall:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>OnDownFile('zip');
-			},
-			makefile:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>OnMakeFile();
-			},
-			issue:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>IssuePlugin();
-		  	},
-			showinfo:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>IssueShowInfo();
-			},
-			accept:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>IssueAccept(1, 0);
-			},
-			deny:function(t, m) { 
-				return <?cs var:config.plugin_pre ?>IssueAccept(0, 0);
+			bindings: { 
+				modify:function(t, m) {
+					return <?cs var:config.plugin_pre ?>ModPlugin();
+				},
+				delete:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>DeletePlugin();
+				},
+				downpb:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>OnDownFile('pb');	
+				},
+				downconf:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>OnDownFile('conf');
+				},
+				downall:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>OnDownFile('zip');
+				},
+				makefile:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>OnMakeFile();
+				},
+				issue:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>IssuePlugin();
+			  	},
+				showinfo:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>IssueShowInfo();
+				},
+				accept:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>IssueAccept(1, 0);
+				},
+				deny:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>IssueAccept(0, 0);
+				}
 			}
-		}
+		});
 	});
 }
 
@@ -412,11 +492,9 @@ function <?cs var:config.plugin_pre ?>Search()
 				alertMsg.warn("系统监控插件信息获取失败:" + js.errmsg);
 				return;
 			}
-			$("#<?cs var:config.plugin_pre ?>_plugin_list_tbody").html('');
 			if(js.count > 0) {
 				<?cs var:config.plugin_pre ?>_plugin_list = js;
-				var ulist = <?cs var:config.plugin_pre ?>SetpluginList();
-				$("#<?cs var:config.plugin_pre ?>_plugin_list_tbody").html(ulist);
+				<?cs var:config.plugin_pre ?>SetpluginList();
 			}
 		}
 	});
